Updated title and subtitle to appear more professional

--- a/contact.html
+++ b/contact.html
@@ -20,9 +20,9 @@
           <img src="static/images/new_logo.png">
         </div>
 
-        <h1 class="py-3">CONTACT UBERMELON NOW</h1>
+        <h1 class="py-3">Contact Ubermelon Today!</h1>
         <p class="lead">
-          WE WOULD LOVE TO HEAR YOUR COMPLAINTS BUT ONLY IF THEY ARE VALID
+          Let us know how we're doing by filling out the fields below.
         </p>
       </div>
     </header>
